--- a/dental.css
+++ b/dental.css
@@ -260,3 +260,33 @@
     height: 100%;
     object-fit: cover;
 }
+
+.sec-2{
+    text-align: center;
+    margin-top:100px;
+    background-color: #0071e9;
+    padding: 50px;
+}
+
+.sec-2 h1{
+    font-size: 50px;
+    color: white;
+    font-weight: 900;
+    margin-bottom: 50px;
+}
+
+.sec-2cc{
+    display: flex;
+    justify-content: center;
+    gap: 40px;
+    margin-bottom: 50px;
+    
+
+}
+
+.sec-2card{
+    width: 300px;
+    height: 300px;
+    background-color: white;
+    border-radius: 10px;
+}
