--- a/dental.css
+++ b/dental.css
@@ -125,7 +125,6 @@
     border-radius: 50px;
     width: 100px;
     height: 40px;
-   
 }
 
 
@@ -296,4 +295,63 @@
 
 .sec-2card h4{
     font-weight:800;
+}
+
+.sec-2cardg{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+}
+
+.sec-2cardg img{
+    width: 50px;  
+}
+.tob{
+    width: 80px;
+    height: 80px;
+    background-color: #0071e9;
+    align-items: center;
+    padding: 10px;
+    border-radius: 50px;
+}
+
+.btn2{
+    padding: 10px 15px;
+    border-radius: 50px;
+    background-color: #67d8e4;
+    font-weight: 500;
+    color: white;
+    border: none;
+    margin-bottom: 30px;
+    
+}
+
+.sec-3{
+    display: flex;
+    background:to top, linear-gradient(white, white);
+    justify-content: center;
+    padding-top: 100px;
+}
+
+.sec-3c{
+    gap: 20px;
+    width: 500px;
+    display: flex;
+    flex-direction: column;
+    text-align: start;
+    align-items: start;
+}
+.sec-3 img{
+    width: 600px;
+    height: 500px;
+}
+.sec-3c h1{
+    font-size: 35px;
+    font-weight: 700;
+}
+
+.sec3dsc{
+    display: flex;
+    gap: 20px;
 }
