--- a/dental.css
+++ b/dental.css
@@ -362,3 +362,44 @@
     display: flex;
     gap: 20px;
 }
+.sec-4cc{
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+}
+.sec-4{
+    height: 700px;
+    text-align: center;
+    margin-top:100px;
+    background-color: #0071e9;
+    padding: 50px;
+}
+.sec-4c{
+    background-color: #818bf790;
+    width: 300px;
+    height: 350px;
+    border-radius: 10px;
+    border: none;
+    
+}
+.sec-4c:hover{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    width: 380px;
+    height: 400px;
+    transition: 0.5s;
+    opacity: 100;
+}
+.sec-4c img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    margin-bottom: 20px;
+}
+
+.sec-4c h4 ,p{
+    margin: 0;
+    color: white;
+}
+
