--- a/dental.css
+++ b/dental.css
@@ -2,6 +2,10 @@
     margin: 0;
     padding: 0;
 }
+
+h1,h2,h3,h4,h5,h6, p {
+    color: black;
+}
 .navbar{
     display: flex;
     justify-content: space-between;
@@ -398,7 +402,7 @@
     margin-bottom: 20px;
 }
 
-.sec-4c h4 ,p{
+[text]{
     margin: 0;
     color: white;
 }
