--- a/dental.css
+++ b/dental.css
@@ -139,7 +139,11 @@ h1,h2,h3,h4,h5,h6, p {
     
 }
 
-
+.ch{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
 .m-set h1, span{
     color: #007bff;
