--- a/dental.css
+++ b/dental.css
@@ -106,19 +106,26 @@ h1,h2,h3,h4,h5,h6, p {
    .sidebar-nav {
     position: fixed;
     top: 0;
-    left: 0;
+    left: -250px;
     height: 100vh;
     width: 250px;
     z-index: 999;
-    background-color: #fffffff1;
-    box-shadow: 10px 0 10px rgba(124, 124, 124, 0.404);
-    display:flex;
-    backdrop-filter: blur(10px);
+    background-color: #fffffff8;
+    box-shadow: 10px 0 10px rgba(124, 124, 124, 0.553);
+    display: flex;
+    backdrop-filter: blur(20px);
     padding-top: 20px;
-    transition: all 0.3s ease;
-    opacity: 1;
+    transition: left 0.3s ease, opacity 0.3s ease;
+    opacity: 0;
+    visibility: hidden;
     overflow: hidden;
     flex-direction: column;
+}
+
+.sidebar-nav.active {
+    left: 0;
+    opacity: 1;
+    visibility: visible;
 }
 
 
@@ -240,6 +247,7 @@ h1,h2,h3,h4,h5,h6, p {
 }
 
 [m-set] p{
+    
     font-size: 14px;
     margin: 0;
     padding: 0;
@@ -354,6 +362,7 @@ h1,h2,h3,h4,h5,h6, p {
 
 .sec-2cc{
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     gap: 40px;
     margin-bottom: 50px;
@@ -414,6 +423,7 @@ h1,h2,h3,h4,h5,h6, p {
 }
 
 .sec-3{
+    flex-wrap: wrap;
     display: flex;
     justify-content: center;
     padding-top: 100px;
@@ -441,14 +451,15 @@ h1,h2,h3,h4,h5,h6, p {
     gap: 20px;
 }
 .sec-4cc{
+    margin-bottom: 30px;
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
-    gap: 30px;
+    gap: 50px;
 }
 .sec-4{
-    height: 700px;
+    height: auto;
     text-align: center;
-    
     background-color: #0071e9;
     padding: 50px;
 }
@@ -458,7 +469,7 @@ h1,h2,h3,h4,h5,h6, p {
     height: 350px;
     border-radius: 10px;
     border: none;
-    
+    margin: 20px;
 }
 .sec-4c:hover{
     display: flex;
